TercerIntento/parser.out
Grammar:

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM IDENTIFIER ; block .
Rule 2     block -> variable_declaration_part procedure_declaration_part statement_part
Rule 3     variable_declaration_part -> VAR variable_declaration_list
Rule 4     variable_declaration_part -> empty
Rule 5     variable_declaration_list -> variable_declaration_list variable_declaration ;
Rule 6     variable_declaration_list -> variable_declaration ;
Rule 7     variable_declaration -> identifier_list : typee
Rule 8     identifier_list -> identifier_list , IDENTIFIER
Rule 9     identifier_list -> IDENTIFIER
Rule 10    typee -> simple_type
Rule 11    typee -> array_type
Rule 12    array_type -> ARRAY [ index_range ] OF simple_type
Rule 13    index_range -> INTEGER_CONSTANT RANGE INTEGER_CONSTANT
Rule 14    simple_type -> type_identifier
Rule 15    type_identifier -> IDENTIFIER
Rule 16    type_identifier -> PREDEFINED_TYPE
Rule 17    procedure_declaration_part -> procedure_declaration_part procedure_declaration ;
Rule 18    procedure_declaration_part -> empty
Rule 19    procedure_declaration -> PROCEDURE IDENTIFIER ; block
Rule 20    statement_part -> compound_statement
Rule 21    compound_statement -> BEGIN statement_list END
Rule 22    statement_list -> statement_list ; statement
Rule 23    statement_list -> statement
Rule 24    statement -> simple_statement
Rule 25    statement -> structured_statement
Rule 26    simple_statement -> assignement_statement
Rule 27    simple_statement -> procedure_statement
Rule 28    simple_statement -> read_statement
Rule 29    simple_statement -> write_statement
Rule 30    assignement_statement -> variable ASSIGN expression  [precedence=right, level=1]
Rule 31    procedure_statement -> procedure_identifier
Rule 32    procedure_identifier -> IDENTIFIER
Rule 33    read_statement -> READLN ( variable_list )  [precedence=left, level=5]
Rule 34    read_statement -> READ ( variable_list )  [precedence=left, level=5]
Rule 35    variable_list -> variable_list , input_variable
Rule 36    variable_list -> input_variable
Rule 37    input_variable -> variable
Rule 38    write_statement -> WRITELN ( expression_list )  [precedence=left, level=5]
Rule 39    write_statement -> WRITE ( expression_list )  [precedence=left, level=5]
Rule 40    expression_list -> expression_list , output_value
Rule 41    expression_list -> output_value
Rule 42    output_value -> expression
Rule 43    structured_statement -> compound_statement
Rule 44    structured_statement -> if_statement
Rule 45    structured_statement -> while_statement
Rule 46    if_statement -> IF expression THEN statement ELSE statement
Rule 47    if_statement -> IF expression THEN statement
Rule 48    while_statement -> WHILE expression DO statement
Rule 49    expression -> simple_expression relational_operator simple_expression
Rule 50    expression -> simple_expression
Rule 51    simple_expression -> simple_expression adding_operator term
Rule 52    simple_expression -> sign term
Rule 53    term -> term multiplying_operator factor
Rule 54    term -> factor
Rule 55    factor -> NOT factor
Rule 56    factor -> ( expression )  [precedence=left, level=5]
Rule 57    factor -> constant
Rule 58    factor -> variable
Rule 59    factor -> IDENTIFIER ( expression_list )  [precedence=left, level=5]
Rule 60    sign -> PLUS  [precedence=left, level=3]
Rule 61    sign -> MINUS  [precedence=left, level=3]
Rule 62    sign -> empty
Rule 63    adding_operator -> PLUS  [precedence=left, level=3]
Rule 64    adding_operator -> MINUS  [precedence=left, level=3]
Rule 65    adding_operator -> OR  [precedence=left, level=3]
Rule 66    multiplying_operator -> DIV_REAL
Rule 67    multiplying_operator -> MOD
Rule 68    multiplying_operator -> TIMES  [precedence=left, level=4]
Rule 69    multiplying_operator -> DIV  [precedence=left, level=4]
Rule 70    multiplying_operator -> AND  [precedence=left, level=4]
Rule 71    variable -> indexed_variable
Rule 72    variable -> entire_variable
Rule 73    indexed_variable -> array_variable [ expression ]
Rule 74    array_variable -> entire_variable
Rule 75    entire_variable -> variable_identifier
Rule 76    variable_identifier -> IDENTIFIER
Rule 77    constant -> LOGIC_CONSTANT
Rule 78    constant -> CHARACTER_CONSTANT
Rule 79    constant -> REAL
Rule 80    constant -> INTEGER_CONSTANT
Rule 81    relational_operator -> =
Rule 82    relational_operator -> DIFF
Rule 83    relational_operator -> <  [precedence=left, level=2]
Rule 84    relational_operator -> >  [precedence=left, level=2]
Rule 85    relational_operator -> LE  [precedence=left, level=2]
Rule 86    relational_operator -> GE  [precedence=left, level=2]
Rule 87    empty -> <empty>

Terminals, with rules where they appear:

(                    : 33 34 38 39 56 59
)                    : 33 34 38 39 56 59
,                    : 8 35 40
.                    : 1
:                    : 7
;                    : 1 5 6 17 19 22
<                    : 83
=                    : 81
>                    : 84
AND                  : 70
ARRAY                : 12
ASSIGN               : 30
BEGIN                : 21
CHARACTER_CONSTANT   : 78
DIFF                 : 82
DIV                  : 69
DIV_REAL             : 66
DO                   : 48
ELSE                 : 46
END                  : 21
GE                   : 86
IDENTIFIER           : 1 8 9 15 19 32 59 76
IF                   : 46 47
INTEGER_CONSTANT     : 13 13 80
LE                   : 85
LOGIC_CONSTANT       : 77
MINUS                : 61 64
MOD                  : 67
NOT                  : 55
OF                   : 12
OR                   : 65
PLUS                 : 60 63
PREDEFINED_TYPE      : 16
PROCEDURE            : 19
PROGRAM              : 1
RANGE                : 13
READ                 : 34
READLN               : 33
REAL                 : 79
THEN                 : 46 47
TIMES                : 68
VAR                  : 3
WHILE                : 48
WRITE                : 39
WRITELN              : 38
[                    : 12 73
]                    : 12 73
error                : 

Nonterminals, with rules where they appear:

adding_operator      : 51
array_type           : 11
array_variable       : 73
assignement_statement : 26
block                : 1 19
compound_statement   : 20 43
constant             : 57
empty                : 4 18 62
entire_variable      : 72 74
expression           : 30 42 46 47 48 56 73
expression_list      : 38 39 40 59
factor               : 53 54 55
identifier_list      : 7 8
if_statement         : 44
index_range          : 12
indexed_variable     : 71
input_variable       : 35 36
multiplying_operator : 53
output_value         : 40 41
procedure_declaration : 17
procedure_declaration_part : 2 17
procedure_identifier : 31
procedure_statement  : 27
programa             : 0
read_statement       : 28
relational_operator  : 49
sign                 : 52
simple_expression    : 49 49 50 51
simple_statement     : 24
simple_type          : 10 12
statement            : 22 23 46 46 47 48
statement_list       : 21 22
statement_part       : 2
structured_statement : 25
term                 : 51 52 53
type_identifier      : 14
typee                : 7
variable             : 30 37 58
variable_declaration : 5 6
variable_declaration_list : 3 5
variable_declaration_part : 2
variable_identifier  : 75
variable_list        : 33 34 35
while_statement      : 45
write_statement      : 29


state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM IDENTIFIER ; block .
    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .


state 2

    (1) programa -> PROGRAM . IDENTIFIER ; block .
    IDENTIFIER      shift and go to state 3


state 3

    (1) programa -> PROGRAM IDENTIFIER . ; block .
    ;               shift and go to state 4


state 4

    (1) programa -> PROGRAM IDENTIFIER ; . block .
    (2) block -> . variable_declaration_part procedure_declaration_part statement_part
    (3) variable_declaration_part -> . VAR variable_declaration_list
    (4) variable_declaration_part -> . empty
    (87) empty -> .
    VAR             shift and go to state 7
    PROCEDURE       reduce using rule 87 (empty -> .)
    BEGIN           reduce using rule 87 (empty -> .)

    block                          shift and go to state 5
    variable_declaration_part      shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) programa -> PROGRAM IDENTIFIER ; block . .
    .               shift and go to state 9


state 6

    (2) block -> variable_declaration_part . procedure_declaration_part statement_part
    (17) procedure_declaration_part -> . procedure_declaration_part procedure_declaration ;
    (18) procedure_declaration_part -> . empty
    (87) empty -> .
    PROCEDURE       reduce using rule 87 (empty -> .)
    BEGIN           reduce using rule 87 (empty -> .)

    procedure_declaration_part     shift and go to state 10
    empty                          shift and go to state 11

state 7

    (3) variable_declaration_part -> VAR . variable_declaration_list
    (5) variable_declaration_list -> . variable_declaration_list variable_declaration ;
    (6) variable_declaration_list -> . variable_declaration ;
    (7) variable_declaration -> . identifier_list : typee
    (8) identifier_list -> . identifier_list , IDENTIFIER
    (9) identifier_list -> . IDENTIFIER
    IDENTIFIER      shift and go to state 15

    variable_declaration_list      shift and go to state 12
    variable_declaration           shift and go to state 13
    identifier_list                shift and go to state 14

state 8

    (4) variable_declaration_part -> empty .
    PROCEDURE       reduce using rule 4 (variable_declaration_part -> empty .)
    BEGIN           reduce using rule 4 (variable_declaration_part -> empty .)


state 9

    (1) programa -> PROGRAM IDENTIFIER ; block . .
    $end            reduce using rule 1 (programa -> PROGRAM IDENTIFIER ; block . .)


state 10

    (2) block -> variable_declaration_part procedure_declaration_part . statement_part
    (17) procedure_declaration_part -> procedure_declaration_part . procedure_declaration ;
    (20) statement_part -> . compound_statement
    (19) procedure_declaration -> . PROCEDURE IDENTIFIER ; block
    (21) compound_statement -> . BEGIN statement_list END
    PROCEDURE       shift and go to state 19
    BEGIN           shift and go to state 20

    statement_part                 shift and go to state 16
    procedure_declaration          shift and go to state 17
    compound_statement             shift and go to state 18

state 11

    (18) procedure_declaration_part -> empty .
    PROCEDURE       reduce using rule 18 (procedure_declaration_part -> empty .)
    BEGIN           reduce using rule 18 (procedure_declaration_part -> empty .)


state 12

    (3) variable_declaration_part -> VAR variable_declaration_list .
    (5) variable_declaration_list -> variable_declaration_list . variable_declaration ;
    (7) variable_declaration -> . identifier_list : typee
    (8) identifier_list -> . identifier_list , IDENTIFIER
    (9) identifier_list -> . IDENTIFIER
    PROCEDURE       reduce using rule 3 (variable_declaration_part -> VAR variable_declaration_list .)
    BEGIN           reduce using rule 3 (variable_declaration_part -> VAR variable_declaration_list .)
    IDENTIFIER      shift and go to state 15

    variable_declaration           shift and go to state 21
    identifier_list                shift and go to state 14

state 13

    (6) variable_declaration_list -> variable_declaration . ;
    ;               shift and go to state 22


state 14

    (7) variable_declaration -> identifier_list . : typee
    (8) identifier_list -> identifier_list . , IDENTIFIER
    :               shift and go to state 23
    ,               shift and go to state 24


state 15

    (9) identifier_list -> IDENTIFIER .
    :               reduce using rule 9 (identifier_list -> IDENTIFIER .)
    ,               reduce using rule 9 (identifier_list -> IDENTIFIER .)


state 16

    (2) block -> variable_declaration_part procedure_declaration_part statement_part .
    .               reduce using rule 2 (block -> variable_declaration_part procedure_declaration_part statement_part .)
    ;               reduce using rule 2 (block -> variable_declaration_part procedure_declaration_part statement_part .)


state 17

    (17) procedure_declaration_part -> procedure_declaration_part procedure_declaration . ;
    ;               shift and go to state 25


state 18

    (20) statement_part -> compound_statement .
    .               reduce using rule 20 (statement_part -> compound_statement .)
    ;               reduce using rule 20 (statement_part -> compound_statement .)


state 19

    (19) procedure_declaration -> PROCEDURE . IDENTIFIER ; block
    IDENTIFIER      shift and go to state 26


state 20

    (21) compound_statement -> BEGIN . statement_list END
    (22) statement_list -> . statement_list ; statement
    (23) statement_list -> . statement
    (24) statement -> . simple_statement
    (25) statement -> . structured_statement
    (26) simple_statement -> . assignement_statement
    (27) simple_statement -> . procedure_statement
    (28) simple_statement -> . read_statement
    (29) simple_statement -> . write_statement
    (43) structured_statement -> . compound_statement
    (44) structured_statement -> . if_statement
    (45) structured_statement -> . while_statement
    (30) assignement_statement -> . variable ASSIGN expression
    (31) procedure_statement -> . procedure_identifier
    (33) read_statement -> . READLN ( variable_list )
    (34) read_statement -> . READ ( variable_list )
    (38) write_statement -> . WRITELN ( expression_list )
    (39) write_statement -> . WRITE ( expression_list )
    (21) compound_statement -> . BEGIN statement_list END
    (46) if_statement -> . IF expression THEN statement ELSE statement
    (47) if_statement -> . IF expression THEN statement
    (48) while_statement -> . WHILE expression DO statement
    (71) variable -> . indexed_variable
    (72) variable -> . entire_variable
    (32) procedure_identifier -> . IDENTIFIER
    (73) indexed_variable -> . array_variable [ expression ]
    (75) entire_variable -> . variable_identifier
    (74) array_variable -> . entire_variable
    (76) variable_identifier -> . IDENTIFIER
    READLN          shift and go to state 40
    READ            shift and go to state 41
    WRITELN         shift and go to state 42
    WRITE           shift and go to state 43
    BEGIN           shift and go to state 20
    IF              shift and go to state 44
    WHILE           shift and go to state 45
    IDENTIFIER      shift and go to state 48

    statement_list                 shift and go to state 27
    statement                      shift and go to state 28
    simple_statement               shift and go to state 29
    structured_statement           shift and go to state 30
    assignement_statement          shift and go to state 31
    procedure_statement            shift and go to state 32
    read_statement                 shift and go to state 33
    write_statement                shift and go to state 34
    compound_statement             shift and go to state 35
    if_statement                   shift and go to state 36
    while_statement                shift and go to state 37
    variable                       shift and go to state 38
    procedure_identifier           shift and go to state 39
    indexed_variable               shift and go to state 46
    entire_variable                shift and go to state 47
    array_variable                 shift and go to state 49
    variable_identifier            shift and go to state 50

state 21

    (5) variable_declaration_list -> variable_declaration_list variable_declaration . ;
    ;               shift and go to state 51


state 22

    (6) variable_declaration_list -> variable_declaration ; .
    IDENTIFIER      reduce using rule 6 (variable_declaration_list -> variable_declaration ; .)
    PROCEDURE       reduce using rule 6 (variable_declaration_list -> variable_declaration ; .)
    BEGIN           reduce using rule 6 (variable_declaration_list -> variable_declaration ; .)


state 23

    (7) variable_declaration -> identifier_list : . typee
    (10) typee -> . simple_type
    (11) typee -> . array_type
    (14) simple_type -> . type_identifier
    (12) array_type -> . ARRAY [ index_range ] OF simple_type
    (15) type_identifier -> . IDENTIFIER
    (16) type_identifier -> . PREDEFINED_TYPE
    ARRAY           shift and go to state 56
    IDENTIFIER      shift and go to state 57
    PREDEFINED_TYPE shift and go to state 58

    typee                          shift and go to state 52
    simple_type                    shift and go to state 53
    array_type                     shift and go to state 54
    type_identifier                shift and go to state 55

state 24

    (8) identifier_list -> identifier_list , . IDENTIFIER
    IDENTIFIER      shift and go to state 59


state 25

    (17) procedure_declaration_part -> procedure_declaration_part procedure_declaration ; .
    PROCEDURE       reduce using rule 17 (procedure_declaration_part -> procedure_declaration_part procedure_declaration ; .)
    BEGIN           reduce using rule 17 (procedure_declaration_part -> procedure_declaration_part procedure_declaration ; .)


state 26

    (19) procedure_declaration -> PROCEDURE IDENTIFIER . ; block
    ;               shift and go to state 60


state 27

    (21) compound_statement -> BEGIN statement_list . END
    (22) statement_list -> statement_list . ; statement
    END             shift and go to state 61
    ;               shift and go to state 62


state 28

    (23) statement_list -> statement .
    END             reduce using rule 23 (statement_list -> statement .)
    ;               reduce using rule 23 (statement_list -> statement .)


state 29

    (24) statement -> simple_statement .
    END             reduce using rule 24 (statement -> simple_statement .)
    ;               reduce using rule 24 (statement -> simple_statement .)
    ELSE            reduce using rule 24 (statement -> simple_statement .)


state 30

    (25) statement -> structured_statement .
    END             reduce using rule 25 (statement -> structured_statement .)
    ;               reduce using rule 25 (statement -> structured_statement .)
    ELSE            reduce using rule 25 (statement -> structured_statement .)


state 31

    (26) simple_statement -> assignement_statement .
    END             reduce using rule 26 (simple_statement -> assignement_statement .)
    ;               reduce using rule 26 (simple_statement -> assignement_statement .)
    ELSE            reduce using rule 26 (simple_statement -> assignement_statement .)


state 32

    (27) simple_statement -> procedure_statement .
    END             reduce using rule 27 (simple_statement -> procedure_statement .)
    ;               reduce using rule 27 (simple_statement -> procedure_statement .)
    ELSE            reduce using rule 27 (simple_statement -> procedure_statement .)


state 33

    (28) simple_statement -> read_statement .
    END             reduce using rule 28 (simple_statement -> read_statement .)
    ;               reduce using rule 28 (simple_statement -> read_statement .)
    ELSE            reduce using rule 28 (simple_statement -> read_statement .)


state 34

    (29) simple_statement -> write_statement .
    END             reduce using rule 29 (simple_statement -> write_statement .)
    ;               reduce using rule 29 (simple_statement -> write_statement .)
    ELSE            reduce using rule 29 (simple_statement -> write_statement .)


state 35

    (43) structured_statement -> compound_statement .
    END             reduce using rule 43 (structured_statement -> compound_statement .)
    ;               reduce using rule 43 (structured_statement -> compound_statement .)
    ELSE            reduce using rule 43 (structured_statement -> compound_statement .)


state 36

    (44) structured_statement -> if_statement .
    END             reduce using rule 44 (structured_statement -> if_statement .)
    ;               reduce using rule 44 (structured_statement -> if_statement .)
    ELSE            reduce using rule 44 (structured_statement -> if_statement .)


state 37

    (45) structured_statement -> while_statement .
    END             reduce using rule 45 (structured_statement -> while_statement .)
    ;               reduce using rule 45 (structured_statement -> while_statement .)
    ELSE            reduce using rule 45 (structured_statement -> while_statement .)


state 38

    (30) assignement_statement -> variable . ASSIGN expression
    ASSIGN          shift and go to state 63


state 39

    (31) procedure_statement -> procedure_identifier .
    END             reduce using rule 31 (procedure_statement -> procedure_identifier .)
    ;               reduce using rule 31 (procedure_statement -> procedure_identifier .)
    ELSE            reduce using rule 31 (procedure_statement -> procedure_identifier .)


state 40

    (33) read_statement -> READLN . ( variable_list )
    (               shift and go to state 64


state 41

    (34) read_statement -> READ . ( variable_list )
    (               shift and go to state 65


state 42

    (38) write_statement -> WRITELN . ( expression_list )
    (               shift and go to state 66


state 43

    (39) write_statement -> WRITE . ( expression_list )
    (               shift and go to state 67


state 44

    (46) if_statement -> IF . expression THEN statement ELSE statement
    (47) if_statement -> IF . expression THEN statement
    (49) expression -> . simple_expression relational_operator simple_expression
    (50) expression -> . simple_expression
    (51) simple_expression -> . simple_expression adding_operator term
    (52) simple_expression -> . sign term
    (60) sign -> . PLUS
    (61) sign -> . MINUS
    (62) sign -> . empty
    (87) empty -> .
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    NOT             reduce using rule 87 (empty -> .)
    (               reduce using rule 87 (empty -> .)
    IDENTIFIER      reduce using rule 87 (empty -> .)
    LOGIC_CONSTANT  reduce using rule 87 (empty -> .)
    CHARACTER_CONSTANT reduce using rule 87 (empty -> .)
    REAL            reduce using rule 87 (empty -> .)
    INTEGER_CONSTANT reduce using rule 87 (empty -> .)

    expression                     shift and go to state 68
    simple_expression              shift and go to state 69
    sign                           shift and go to state 70
    empty                          shift and go to state 73

state 45

    (48) while_statement -> WHILE . expression DO statement
    (49) expression -> . simple_expression relational_operator simple_expression
    (50) expression -> . simple_expression
    (51) simple_expression -> . simple_expression adding_operator term
    (52) simple_expression -> . sign term
    (60) sign -> . PLUS
    (61) sign -> . MINUS
    (62) sign -> . empty
    (87) empty -> .
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    NOT             reduce using rule 87 (empty -> .)
    (               reduce using rule 87 (empty -> .)
    IDENTIFIER      reduce using rule 87 (empty -> .)
    LOGIC_CONSTANT  reduce using rule 87 (empty -> .)
    CHARACTER_CONSTANT reduce using rule 87 (empty -> .)
    REAL            reduce using rule 87 (empty -> .)
    INTEGER_CONSTANT reduce using rule 87 (empty -> .)

    expression                     shift and go to state 74
    simple_expression              shift and go to state 69
    sign                           shift and go to state 70
    empty                          shift and go to state 73

state 46

    (71) variable -> indexed_variable .
    ASSIGN          reduce using rule 71 (variable -> indexed_variable .)
    )               reduce using rule 71 (variable -> indexed_variable .)
    ,               reduce using rule 71 (variable -> indexed_variable .)
    DIV_REAL        reduce using rule 71 (variable -> indexed_variable .)
    MOD             reduce using rule 71 (variable -> indexed_variable .)
    TIMES           reduce using rule 71 (variable -> indexed_variable .)
    DIV             reduce using rule 71 (variable -> indexed_variable .)
    AND             reduce using rule 71 (variable -> indexed_variable .)
    =               reduce using rule 71 (variable -> indexed_variable .)
    DIFF            reduce using rule 71 (variable -> indexed_variable .)
    <               reduce using rule 71 (variable -> indexed_variable .)
    >               reduce using rule 71 (variable -> indexed_variable .)
    LE              reduce using rule 71 (variable -> indexed_variable .)
    GE              reduce using rule 71 (variable -> indexed_variable .)
    PLUS            reduce using rule 71 (variable -> indexed_variable .)
    MINUS           reduce using rule 71 (variable -> indexed_variable .)
    OR              reduce using rule 71 (variable -> indexed_variable .)
    THEN            reduce using rule 71 (variable -> indexed_variable .)
    DO              reduce using rule 71 (variable -> indexed_variable .)
    END             reduce using rule 71 (variable -> indexed_variable .)
    ;               reduce using rule 71 (variable -> indexed_variable .)
    ELSE            reduce using rule 71 (variable -> indexed_variable .)
    ]               reduce using rule 71 (variable -> indexed_variable .)


state 47

    (72) variable -> entire_variable .
    (74) array_variable -> entire_variable .
    ASSIGN          reduce using rule 72 (variable -> entire_variable .)
    )               reduce using rule 72 (variable -> entire_variable .)
    ,               reduce using rule 72 (variable -> entire_variable .)
    DIV_REAL        reduce using rule 72 (variable -> entire_variable .)
    MOD             reduce using rule 72 (variable -> entire_variable .)
    TIMES           reduce using rule 72 (variable -> entire_variable .)
    DIV             reduce using rule 72 (variable -> entire_variable .)
    AND             reduce using rule 72 (variable -> entire_variable .)
    =               reduce using rule 72 (variable -> entire_variable .)
    DIFF            reduce using rule 72 (variable -> entire_variable .)
    <               reduce using rule 72 (variable -> entire_variable .)
    >               reduce using rule 72 (variable -> entire_variable .)
    LE              reduce using rule 72 (variable -> entire_variable .)
    GE              reduce using rule 72 (variable -> entire_variable .)
    PLUS            reduce using rule 72 (variable -> entire_variable .)
    MINUS           reduce using rule 72 (variable -> entire_variable .)
    OR              reduce using rule 72 (variable -> entire_variable .)
    THEN            reduce using rule 72 (variable -> entire_variable .)
    DO              reduce using rule 72 (variable -> entire_variable .)
    END             reduce using rule 72 (variable -> entire_variable .)
    ;               reduce using rule 72 (variable -> entire_variable .)
    ELSE            reduce using rule 72 (variable -> entire_variable .)
    ]               reduce using rule 72 (variable -> entire_variable .)
    [               reduce using rule 74 (array_variable -> entire_variable .)


state 48

    (32) procedure_identifier -> IDENTIFIER .
    (76) variable_identifier -> IDENTIFIER .
    END             reduce using rule 32 (procedure_identifier -> IDENTIFIER .)
    ;               reduce using rule 32 (procedure_identifier -> IDENTIFIER .)
    ELSE            reduce using rule 32 (procedure_identifier -> IDENTIFIER .)
    ASSIGN          reduce using rule 76 (variable_identifier -> IDENTIFIER .)
    [               reduce using rule 76 (variable_identifier -> IDENTIFIER .)


state 49

    (73) indexed_variable -> array_variable . [ expression ]
    [               shift and go to state 75


state 50

    (75) entire_variable -> variable_identifier .
    ASSIGN          reduce using rule 75 (entire_variable -> variable_identifier .)
    [               reduce using rule 75 (entire_variable -> variable_identifier .)
    )               reduce using rule 75 (entire_variable -> variable_identifier .)
    ,               reduce using rule 75 (entire_variable -> variable_identifier .)
    DIV_REAL        reduce using rule 75 (entire_variable -> variable_identifier .)
    MOD             reduce using rule 75 (entire_variable -> variable_identifier .)
    TIMES           reduce using rule 75 (entire_variable -> variable_identifier .)
    DIV             reduce using rule 75 (entire_variable -> variable_identifier .)
    AND             reduce using rule 75 (entire_variable -> variable_identifier .)
    =               reduce using rule 75 (entire_variable -> variable_identifier .)
    DIFF            reduce using rule 75 (entire_variable -> variable_identifier .)
    <               reduce using rule 75 (entire_variable -> variable_identifier .)
    >               reduce using rule 75 (entire_variable -> variable_identifier .)
    LE              reduce using rule 75 (entire_variable -> variable_identifier .)
    GE              reduce using rule 75 (entire_variable -> variable_identifier .)
    PLUS            reduce using rule 75 (entire_variable -> variable_identifier .)
    MINUS           reduce using rule 75 (entire_variable -> variable_identifier .)
    OR              reduce using rule 75 (entire_variable -> variable_identifier .)
    THEN            reduce using rule 75 (entire_variable -> variable_identifier .)
    DO              reduce using rule 75 (entire_variable -> variable_identifier .)
    END             reduce using rule 75 (entire_variable -> variable_identifier .)
    ;               reduce using rule 75 (entire_variable -> variable_identifier .)
    ELSE            reduce using rule 75 (entire_variable -> variable_identifier .)
    ]               reduce using rule 75 (entire_variable -> variable_identifier .)


state 51

    (5) variable_declaration_list -> variable_declaration_list variable_declaration ; .
    IDENTIFIER      reduce using rule 5 (variable_declaration_list -> variable_declaration_list variable_declaration ; .)
    PROCEDURE       reduce using rule 5 (variable_declaration_list -> variable_declaration_list variable_declaration ; .)
    BEGIN           reduce using rule 5 (variable_declaration_list -> variable_declaration_list variable_declaration ; .)


state 52

    (7) variable_declaration -> identifier_list : typee .
    ;               reduce using rule 7 (variable_declaration -> identifier_list : typee .)


state 53

    (10) typee -> simple_type .
    ;               reduce using rule 10 (typee -> simple_type .)


state 54

    (11) typee -> array_type .
    ;               reduce using rule 11 (typee -> array_type .)


state 55

    (14) simple_type -> type_identifier .
    ;               reduce using rule 14 (simple_type -> type_identifier .)


state 56

    (12) array_type -> ARRAY . [ index_range ] OF simple_type
    [               shift and go to state 76


state 57

    (15) type_identifier -> IDENTIFIER .
    ;               reduce using rule 15 (type_identifier -> IDENTIFIER .)


state 58

    (16) type_identifier -> PREDEFINED_TYPE .
    ;               reduce using rule 16 (type_identifier -> PREDEFINED_TYPE .)


state 59

    (8) identifier_list -> identifier_list , IDENTIFIER .
    :               reduce using rule 8 (identifier_list -> identifier_list , IDENTIFIER .)
    ,               reduce using rule 8 (identifier_list -> identifier_list , IDENTIFIER .)


state 60

    (19) procedure_declaration -> PROCEDURE IDENTIFIER ; . block
    (2) block -> . variable_declaration_part procedure_declaration_part statement_part
    (3) variable_declaration_part -> . VAR variable_declaration_list
    (4) variable_declaration_part -> . empty
    (87) empty -> .
    VAR             shift and go to state 7
    PROCEDURE       reduce using rule 87 (empty -> .)
    BEGIN           reduce using rule 87 (empty -> .)

    block                          shift and go to state 77
    variable_declaration_part      shift and go to state 6
    empty                          shift and go to state 8

state 61

    (21) compound_statement -> BEGIN statement_list END .
    .               reduce using rule 21 (compound_statement -> BEGIN statement_list END .)
    ;               reduce using rule 21 (compound_statement -> BEGIN statement_list END .)
    END             reduce using rule 21 (compound_statement -> BEGIN statement_list END .)
    ELSE            reduce using rule 21 (compound_statement -> BEGIN statement_list END .)


state 62

    (22) statement_list -> statement_list ; . statement
    (24) statement -> . simple_statement
    (25) statement -> . structured_statement
    (26) simple_statement -> . assignement_statement
    (27) simple_statement -> . procedure_statement
    (28) simple_statement -> . read_statement
    (29) simple_statement -> . write_statement
    (43) structured_statement -> . compound_statement
    (44) structured_statement -> . if_statement
    (45) structured_statement -> . while_statement
    (30) assignement_statement -> . variable ASSIGN expression
    (31) procedure_statement -> . procedure_identifier
    (33) read_statement -> . READLN ( variable_list )
    (34) read_statement -> . READ ( variable_list )
    (38) write_statement -> . WRITELN ( expression_list )
    (39) write_statement -> . WRITE ( expression_list )
    (21) compound_statement -> . BEGIN statement_list END
    (46) if_statement -> . IF expression THEN statement ELSE statement
    (47) if_statement -> . IF expression THEN statement
    (48) while_statement -> . WHILE expression DO statement
    (71) variable -> . indexed_variable
    (72) variable -> . entire_variable
    (32) procedure_identifier -> . IDENTIFIER
    (73) indexed_variable -> . array_variable [ expression ]
    (75) entire_variable -> . variable_identifier
    (74) array_variable -> . entire_variable
    (76) variable_identifier -> . IDENTIFIER
    READLN          shift and go to state 40
    READ            shift and go to state 41
    WRITELN         shift and go to state 42
    WRITE           shift and go to state 43
    BEGIN           shift and go to state 20
    IF              shift and go to state 44
    WHILE           shift and go to state 45
    IDENTIFIER      shift and go to state 48

    statement                      shift and go to state 78
    simple_statement               shift and go to state 29
    structured_statement           shift and go to state 30
    assignement_statement          shift and go to state 31
    procedure_statement            shift and go to state 32
    read_statement                 shift and go to state 33
    write_statement                shift and go to state 34
    compound_statement             shift and go to state 35
    if_statement                   shift and go to state 36
    while_statement                shift and go to state 37
    variable                       shift and go to state 38
    procedure_identifier           shift and go to state 39
    indexed_variable               shift and go to state 46
    entire_variable                shift and go to state 47
    array_variable                 shift and go to state 49
    variable_identifier            shift and go to state 50

state 63

    (30) assignement_statement -> variable ASSIGN . expression
    (49) expression -> . simple_expression relational_operator simple_expression
    (50) expression -> . simple_expression
    (51) simple_expression -> . simple_expression adding_operator term
    (52) simple_expression -> . sign term
    (60) sign -> . PLUS
    (61) sign -> . MINUS
    (62) sign -> . empty
    (87) empty -> .
    PLUS            shift and go to state 71
    MINUS           shift and go to state 72
    NOT             reduce using rule 87 (empty -> .)
    (               reduce using rule 87 (empty -> .)
    IDENTIFIER      reduce using rule 87 (empty -> .)
    LOGIC_CONSTANT  reduce using rule 87 (empty -> .)
    CHARACTER_CONSTANT reduce using rule 87 (empty -> .)
    REAL            reduce using rule 87 (empty -> .)
    INTEGER_CONSTANT reduce using rule 87 (empty -> .)

    expression                     shift and go to state 79
    simple_expression              shift and go to state 69
    sign                           shift and go to state 70
    empty                          shift and go to state 73

state 64

    (33) read_statement -> READLN ( . variable_list )
    (35) variable_list -> . variable_list , input_variable
    (36) variable_list -> . input_variable
    (37) input_variable -> . variable
    (71) variable -> . indexed_variable
    (72) variable -> . entire_variable
    (73) indexed_variable -> . array_variable [ expression ]
    (75) entire_variable -> . variable_identifier
    (74) array_variable -> . entire_variable
    (76) variable_identifier -> . IDENTIFIER
    IDENTIFIER      shift and go to state 83

    variable_list                  shift and go to state 80
    input_variable                 shift and go to state 81
    variable                       shift and go to state 82
    indexed_variable               shift and go to state 46
    entire_variable                shift and go to state 47
    array_variable                 shift and go to state 49
    variable_identifier            shift and go to state 50

state 65

    (34) read_statement -> READ ( . variable_list )
    (35) variable_list -> . variable_list , input_variable
    (36) variable_list -> . input_variable
    (37) input_variable -> . variable
    (71) variable -> . indexed_variable
    (72) variable -> . entire_variable
    (73) indexed_variable -> . array_variable [ expression ]
    (75) entire_variable -> . variable_identifier
    (74) array_variable -> . entire_variable
    (76) variable_identifier -> . IDENTIFIER
    IDENTIFIER      shift and go to state 83

    variable_list                  shift and go to state 84
    input_variable                 shift and go to state 81
    variable                       shift and go to state 82
    indexed_variable               shift and go to state 46
    entire_variable                shift and go to state 47
    array_variable                 shift and go to state 49
    variable_identifier            shift and go to state 50

state 66
